# gpgpu

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: compile_cl.cpp
include/cu/: addition_cl.cpp  addition_cpu.cpp  addition_cuda.cu  addition_metal.mm  vector_add_kernel.cl
include/gpgpu/: builder+cuda.hpp  builder.hpp  kernel.hpp  runtime.hpp
include/gpgpu/builder/: IntegerConstant.hpp  addition_operator.hpp  array_element.hpp  base_builder.hpp  constants.hpp  equals_operator.hpp  function_arg.hpp  global_thread.hpp  integer_constant.hpp  kernel.hpp  line_comment.hpp  variable_declare.hpp  variable_reference.hpp
metal_example/: cuckoo.mm
src/: builder.cpp  kernel.cpp
src/builder/: addition_operator.cpp  array_element.cpp  base_builder.cpp  equals_operation.cpp  function_arg.cpp  global_thread.cpp  integer_constant.cpp  kernel.cpp  line_comment.cpp  variable_declare.cpp  variable_reference.cpp
src/linear/: addition_metal.mm
test/: test_gpgpu.cpp
